# LinxCoreModel

./: CMakeLists.txt
common/utils/: error.cpp  log.h
configs/: config.h
emulator/: ArchStatus.h  CMakeLists.txt  ELF.cpp  ELF.h  Memory.cpp  Memory.h  SoftCore.cpp  SysCall.cpp  SysCall.h
emulator/engine/: AaccelssMemoryEngine.cpp  AccumulateBlockInfo.cpp  CTGenEngine.cpp  CubeEngine.cpp  OperandIO.cpp  TEPLEngine.cpp  TMAEngine.cpp
isa/: Block.h
isa/calculate/: CubeCalculate.cpp
isa/calculate/pc/: PC.cpp
isa/calculate/store/: Store.cpp
isa/codec/decodefiles/: block48.decode
model/: CMakeLists.txt  SimSys.cpp  main.cpp
model/DFX/: ResVerifyManager.cpp
model/ModelCommon/: SimInstInfo.h
model/bctrl/: BIFU.h
model/bctrl/bfu/: bfu.cpp  bfu_bhc.cpp  bfu_sp.cpp
model/bctrl/spe/: SPEROB.cpp  SPERename.cpp
model/core/: SRename.cpp
model/iex/: iex.cpp  iex_iq.cpp  rtable.cpp
model/iex/pipe/: agu_pipe.cpp  alu_pipe.cpp  lda_pipe.cpp  sta_pipe.cpp
model/include/: SimSys.h
model/l1/: cluster.cpp
model/lsu/: lsu.cpp
model/lsu/load_unit/: ldq.cpp
model/lsu/store_unit/: store_unit.cpp  stq.cpp
model/mtccore/lsu/load_unit/: ldq.cpp
model/mtccore/memcore/: MemoryLoopManager.cpp
model/plat/: DebugLog.h
model/vectorcore/: GroupBuffer.cpp
scripts/: cycle_csv.py
softfloat/fpu/: softfloat.c
tools/: gen_configs.py
